build_output.txt

> Task :compileJava
C:\Users\sy7co\Desktop\auto_healing\full\backend\demo\src\main\java\com\example\autohealing\ai\OpenAiCompatibleAdapter.java:63: error: cannot find symbol
        "model", config.getApiModelName() != null ? config.getApiModelName() : "gpt-4o",
                       ^
  symbol:   method getApiModelName()
  location: variable config of type PluginConfig
C:\Users\sy7co\Desktop\auto_healing\full\backend\demo\src\main\java\com\example\autohealing\ai\OpenAiCompatibleAdapter.java:63: error: cannot find symbol
        "model", config.getApiModelName() != null ? config.getApiModelName() : "gpt-4o",
                                                          ^
  symbol:   method getApiModelName()
  location: variable config of type PluginConfig
Note: C:\Users\sy7co\Desktop\auto_healing\full\backend\demo\src\main\java\com\example\autohealing\ai\OpenAiCompatibleAdapter.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors

> Task :compileJava FAILED

[Incubating] Problems report is available at: file:///C:/Users/sy7co/Desktop/auto_healing/full/backend/demo/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  Note: C:\Users\sy7co\Desktop\auto_healing\full\backend\demo\src\main\java\com\example\autohealing\ai\OpenAiCompatibleAdapter.java uses unchecked or unsafe operations.
  Note: Recompile with -Xlint:unchecked for details.
  C:\Users\sy7co\Desktop\auto_healing\full\backend\demo\src\main\java\com\example\autohealing\ai\OpenAiCompatibleAdapter.java:63: error: cannot find symbol
          "model", config.getApiModelName() != null ? config.getApiModelName() : "gpt-4o",
                         ^
    symbol:   method getApiModelName()
    location: variable config of type PluginConfig
  C:\Users\sy7co\Desktop\auto_healing\full\backend\demo\src\main\java\com\example\autohealing\ai\OpenAiCompatibleAdapter.java:63: error: cannot find symbol
          "model", config.getApiModelName() != null ? config.getApiModelName() : "gpt-4o",
                                                            ^
    symbol:   method getApiModelName()
    location: variable config of type PluginConfig
  2 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights from a Build Scan (powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.


For more on this, please refer to https://docs.gradle.org/9.3.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.
BUILD FAILED in 5s
1 actionable task: 1 executed
